--- a/themes/lightbi/i18n/en.yaml
+++ b/themes/lightbi/i18n/en.yaml
@@ -4,15 +4,15 @@
 - id: shortdateFormat
   translation: "Jan 2, 2006 15:04:05"
 - id: postedOnDate
-  translation: "Posted on {{ .Count }}"
+  translation: "Posted on {{ . }}"
 - id: lastModified
-  translation: "(Last modified on {{ .Count }})"
+  translation: "(Last modified on {{ . }})"
 - id: translationsLabel
   translation: "Other languages: "
 - id: translationsSeparator
   translation: ", "
 - id: readMore
-  translation: "Read more"
+  translation: "Read More"
 - id: olderPosts
   translation: "Older Posts"
 - id: newerPosts
@@ -31,6 +31,10 @@
 - id: pageNotFound
   translation: "Whoops, this page doesn't exist. Move along. (404 error)"
 
+# Footer
+- id: poweredBy # Accepts HTML
+  translation: '<a href="https://gohugo.io">Hugo v{{ .Site.Hugo.Version }}</a> powered &nbsp;&bull;&nbsp; Theme <a href="https://github.com/halogenica/beautifulhugo">Beautiful Hugo</a> adapted from <a href="https://deanattali.com/beautiful-jekyll/">Beautiful Jekyll</a>'
+
 # Navigation
 - id: toggleNavigation
   translation: "Toggle navigation"
@@ -43,11 +47,27 @@
 - id: gcseClose
   translation: "Close"
 
-  # Footer
-- id: poweredBy # Accepts HTML
-  translation: 'Powered by <a href="https://gohugo.io">Hugo</a> &nbsp;&bull;&nbsp; Theme <a href="https://github.com/binokochumolvarghese/lightbi-hugo">Lightbi</a> adapted from <a href="https://github.com/halogenica/beautifulhugo">Beautiful Hugo</a> &nbsp;&bull;&nbsp; Made with ❤ by <a href="https://binovarghese.com">Bino</a>'
+# Staticman
+- id: noComment
+  translation: "No comment"
+- id: oneComment
+  translation: "comment"
+- id: moreComment
+  translation: "comments"
+- id: useMarkdown
+  translation: "You can use Markdown syntax"
+- id: yourName
+  translation: "Your name"
+- id: yourEmail
+  translation: "Your email address"
+- id: yourWebsite
+  translation: "You website"
 
-
+# Delayed Disqus
+- id: show
+  translation: "Show"
+- id: comments
+  translation: "comments" 
 
 # Related posts
 - id: seeAlso
