--- a/themes/lightbi/i18n/en.yaml
+++ b/themes/lightbi/i18n/en.yaml
@@ -31,9 +31,9 @@
 - id: pageNotFound
   translation: "Whoops, this page doesn't exist. Move along. (404 error)"
 
-# Footer
+  # Footer
 - id: poweredBy # Accepts HTML
-  translation: '<a href="https://gohugo.io">Hugo v{{ .Site.Hugo.Version }}</a> powered &nbsp;&bull;&nbsp; Theme <a href="https://github.com/halogenica/beautifulhugo">Beautiful Hugo</a> adapted from <a href="https://deanattali.com/beautiful-jekyll/">Beautiful Jekyll</a>'
+  translation: 'Powered by <a href="https://gohugo.io">Hugo</a> &nbsp;&bull;&nbsp; Theme <a href="https://github.com/binokochumolvarghese/lightbi-hugo">Lightbi</a> adapted from <a href="https://github.com/halogenica/beautifulhugo">Beautiful Hugo</a> &nbsp;&bull;&nbsp; Made with ❤ by <a href="https://binovarghese.com">Bino</a>'
 
 # Navigation
 - id: toggleNavigation
