Improve German translation, allow multiple forms for "minutes" and "words"

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -22,9 +22,13 @@
 - id: nextPost
   translation: "Next Post"
 - id: readTime
-  translation: "minutes"
+  translation:
+    one: "minute"
+    other: "minutes"
 - id: words
-  translation: "words"
+  translation:
+    one: "word"
+    other: "words"
 
 
 # 404 page
@@ -67,7 +71,7 @@
 - id: show
   translation: "Show"
 - id: comments
-  translation: "comments" 
+  translation: "comments"
 
 # Related posts
 - id: seeAlso
