Implement static search based on lunr

--- a/i18n/de.yaml
+++ b/i18n/de.yaml
@@ -76,3 +76,11 @@
 # Related posts
 - id: seeAlso
   translation: "Siehe auch"
+
+# Search
+- id: noSearchResults
+  translation: "Suchbegriff „{{ .Term }}“ wurde nicht gefunden"
+- id: someSearchResults
+  translation:
+    one: "Ein Suchergebnis für „{{ .Term }}“ gefunden"
+    other: "{{ .Count }} Suchergebnisse für „{{ .Term }}“ gefunden"
