--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -12,7 +12,7 @@
 - id: translationsSeparator
   translation: ", "
 - id: readMore
-  translation: "Read More"
+  translation: "Read more"
 - id: olderPosts
   translation: "Older Posts"
 - id: newerPosts
